# products-service/app/router.py
@@ -1,13 +1,13 @@
 from uuid import UUID
 
-from alembic.util import status
 from app.database import get_db
 from app.models import Product
 from app.schemas import ProductCreate, ProductResponse
-from app.utils import get_user_id_from_token
 from fastapi import APIRouter, Depends, HTTPException, status
 from sqlalchemy import delete, insert, select, update
 from sqlalchemy.ext.asyncio import AsyncSession
+
+from app.utils import get_current_user_id
 
 router = APIRouter(prefix='/products', tags=['products'])
 
@@ -16,7 +16,7 @@ router = APIRouter(prefix='/products', tags=['products'])
 @router.get('/')
 async def get_products(
         session: AsyncSession = Depends(get_db),
-        user_id: UUID = Depends(get_user_id_from_token)
+        user_id: int = Depends(get_current_user_id)
 ) -> list[ProductResponse]:
     """Получить список всех объявлений"""
     query = select(Product.__table__.columns)
@@ -30,7 +30,7 @@ async def get_products(
 async def get_product(
         product_id: UUID,
         session: AsyncSession = Depends(get_db),
-        user_id: UUID = Depends(get_user_id_from_token)
+        user_id: int = Depends(get_current_user_id)
 ) -> ProductResponse:
     """Получить объявление по ID"""
     query = select(Product.__table__.columns).filter_by(id=product_id)
@@ -46,10 +46,12 @@ async def get_product(
 async def create_product(
         product: ProductCreate,
         session: AsyncSession = Depends(get_db),
-        user_id: UUID = Depends(get_user_id_from_token)
+        user_id: int = Depends(get_current_user_id)
 ) -> ProductResponse:
     """Создать новое объявление"""
-    query = insert(Product).values(**product.model_dump()).returning(Product.__table__.columns)
+    values = product.model_dump()
+    values["seller_id"] = user_id
+    query = insert(Product).values(**values).returning(Product.__table__.columns)
     result = await session.execute(query)
     await session.commit()
     mapping_result = result.mappings().one_or_none()
@@ -62,7 +64,7 @@ async def update_product(
         product_id: UUID,
         product: ProductCreate,
         session: AsyncSession = Depends(get_db),
-        user_id: UUID = Depends(get_user_id_from_token)
+        user_id: int = Depends(get_current_user_id)
 ) -> ProductResponse:
     """Обновить существующее объявление"""
     query = select(Product.__table__.columns).filter_by(id=product_id)
@@ -79,11 +81,11 @@ async def update_product(
 
 
 # ----- DELETE /products/{product_id} - удалить объявление -----
-@router.delete('/{task_id}', status_code=204)
+@router.delete('/{product_id}', status_code=204)
 async def delete_product(
         product_id: UUID,
         session: AsyncSession = Depends(get_db),
-        user_id: UUID = Depends(get_user_id_from_token)
+        user_id: int = Depends(get_current_user_id)
 ) -> None:
     """Удалить объявление"""
     query = select(Product.__table__.columns).filter_by(id=product_id)
